tests/invalid/tricky_assert.err_exp
tricky_assert1.m:010: In interface for module `tricky_assert1':
tricky_assert1.m:010:   error: this exported promise refers to predicate
tricky_assert1.m:010:   [38;5;87m`tricky_assert1.local'/0[39;49m, which is [38;5;203mnot exported[39;49m from
tricky_assert1.m:010:   module `tricky_assert1'.
tricky_assert1.m:010:   Either move the promise into the implementation
tricky_assert1.m:010:   section, or move the definition into the interface.
